--- a/task/src/main/webapp/WEB-INF/views/hr/HrOrder.html
+++ b/task/src/main/webapp/WEB-INF/views/hr/HrOrder.html
@@ -25,7 +25,7 @@
 				<div class="app-dashboard-body-content off-canvas-content" data-off-canvas-content>
 				
 					<div data-th-each="hrOrderModel : ${hrOrderModelList}" data-th-remove="tag">
-						<div data-th-replace="hr-order-fragmet :: hr-order-callout(${hrOrderModel})" data-th-remove="tag"></div>
+						<div data-th-replace="hr-order-fragment :: hr-order-callout(${hrOrderModel})" data-th-remove="tag"></div>
 					</div>
 					
 				</div>
