--- a/task/src/main/webapp/WEB-INF/views/hr/HrOrder-add.html
+++ b/task/src/main/webapp/WEB-INF/views/hr/HrOrder-add.html
@@ -30,7 +30,7 @@
 							<div class="medium-12 columns">
 								<h3 data-th-text="#{titleform.new}">new</h3>
 							</div>
-							<div data-th-replace="hr-order-fragment :: core-form"></div>
+							<div data-th-replace="hr/hr-order-fragment :: core-form" data-th-remove="tag"></div>
 							<div data-th-replace="templates/core-tag :: button-submit" data-th-remove="tag"></div>
 						</form>
 					</div>
