--- a/task/src/main/webapp/WEB-INF/views/hr/hr-order-fragment.html
+++ b/task/src/main/webapp/WEB-INF/views/hr/hr-order-fragment.html
@@ -61,8 +61,8 @@
   		<form>
   			<div>
   				<label data-th-text="#{inputlabel.fullNameEmployee}">full name</label>
-  				<select>
-					<option>
+  				<select id="employee">
+					<option >
 				</select>
   			</div>
   			<div data-th-replace="templates/core-tag :: submit-buttpn-reval"></div>
