--- a/task/src/main/webapp/WEB-INF/views/hr/HrOrder-add.html
+++ b/task/src/main/webapp/WEB-INF/views/hr/HrOrder-add.html
@@ -38,8 +38,8 @@
 		</div>
 		
 		<!-- modal add table employee -->
-		<div class="reveal" id="modalAddEmployee" data-reveal data-options="closeOnClick:false; closeOnEsc:false;">
-			<div data-th-replace="hr/hr-order-fragment :: modalAddEmployee" ></div>
+		<div class="reveal" id="modalAddEmployee" data-ajax-url="forme-mployee" data-reveal data-options="closeOnClick:false; closeOnEsc:false;">
+			
 		</div>
 		
 		<div data-th-insert="templates/head :: script" data-th-remove="tag"></div>
