--- a/task/src/main/webapp/WEB-INF/views/fragments/menu.html
+++ b/task/src/main/webapp/WEB-INF/views/fragments/menu.html
@@ -1,9 +1,9 @@
 
 	<!-- main menu -->
 	<ul class="vertical menu expanded" data-th-fragment="home-menu" >
-		<li><a data-th-href="@{employee/}"	data-th-text="#{titleform.admin}" class="expanded"></a></li>
-		<li><a data-th-href="@{position/}"	data-th-text="#{titleform.home.directories}" class="expanded"></a></li>
-		<li><a data-th-href="@{hr/}"	data-th-text="#{titleform.hrOrder}" class="expanded"></a></li>
+		<li><a data-th-href="@{/employee/}"	data-th-text="#{titleform.admin}" class="expanded"></a></li>
+		<li><a data-th-href="@{/position/}"	data-th-text="#{titleform.home.directories}" class="expanded"></a></li>
+		<li><a data-th-href="@{/hr/}"	data-th-text="#{titleform.hrOrder}" class="expanded"></a></li>
 	</ul>
 	
 	<ul class="vertical menu expanded" data-th-fragment="home-admin" >
