--- a/task/src/main/webapp/WEB-INF/views/templates/head.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/head.html
@@ -1,15 +1,13 @@
     
 	<head data-th-fragment="head(titleName)">
-		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
+		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<link data-th-href="@{/resources/css/foundation.css}" rel="stylesheet" />
+		<link rel="stylesheet" data-th-href="@{/webjars/foundation/dist/css/foundation.min.css}">
+		<link rel="stylesheet" data-th-href="@{/webjars/foundation/dist/css/foundation-prototype.min.css}">
+		<link rel="stylesheet" data-th-href="@{/webjars/foundation/dist/css/foundation-float.min.css}">
 		<link data-th-href="@{/resources/fonts/foundation-icons.css}" rel="stylesheet" />
 		<link data-th-href="@{/resources/css/app.css}" rel="stylesheet" />
+		<script type="application/javascript" data-th-src="@{/webjars/jquery/jquery.js}"></script>
+		<script type="application/javascript" data-th-src="@{/webjars/foundation/dist/js/foundation.js}"></script>
 		<title data-th-utext="${titleName}">title</title>
 	</head>
-	
-	<div data-th-fragment="script" data-th-remove="tag">
-		<script type="application/javascript" data-th-src="@{/resources/js/vendor/jquery.js}"></script>
-		<script type="application/javascript" data-th-src="@{/resources/js/vendor/foundation.js}"></script>
-		<script type="application/javascript" data-th-src="@{/resources/js/vendor/what-input.js}"></script>
-	</div>
