--- a/task/src/main/webapp/WEB-INF/views/position/position-fargment.html
+++ b/task/src/main/webapp/WEB-INF/views/position/position-fargment.html
@@ -1,7 +1,5 @@
-	
-	<div data-th-fragment="table-position"  data-th-remove="tag">
 
-		<table class="table">
+		<table class="table" data-th-fragment="table-position">
 				<thead>
 					<tr>
 						<th data-th-text="#{inputlabel.namePost}">name post</th>
@@ -13,7 +11,7 @@
 				</thead>
 				<tbody data-th-each="position : ${allPositions}">
 					<tr>
-						<td data-th-text="${position.name}"></td>
+						<td data-th-text="${position.namePosition}"></td>
 						<td data-th-text="${position.heft}"></td>
 						<td>
 							<ul class="menu align-right">
@@ -31,42 +29,30 @@
 					</tr>
 				</tbody>
 			</table>
-	</div>
 	
-	
-	<div data-th-fragment="core-form-position(nameForm)" data-th-remove="tag">
+	<div >
+		
+		<form data-th-fragment="form-position(titleForm)" 
+			data-th-remove="tag">
+		
+			<div class="medium-12 columns">
+				<h3 data-th-text="${titleForm}">title form</h3>
+			</div>
 			
-			<div class="medium-12 columns">
-				<h3 data-th-text="${nameForm}">new</h3>
-			</div>
-	
-			<!--  -->
-			<div class="medium-12 columns">
-				<input type="hidden" name="id" data-th-field="*{id}" /> 
-			</div>
-
-			<!-- name -->
-			<div data-th-class="${#fields.hasErrors('name')} ? 'medium-12 columns invalid' : 'medium-12 columns' " >
-				<label data-th-text="#{inputlabel.namePost}"></label> 
-				<input type="text" id="name" name="name" data-th-field="*{name}" data-th-placeholder="#{inputlabel.nameDepartment}" autofocus="autofocus" /> 
-				<span class="form-error is-visible" data-th-errors="*{name}" ></span>
-			</div>
+			<!-- name  -->
+			<div data-th-replace="templates/input-custom :: input-12-text('inputlabel.namePost','namePosition')"></div>
 			
 			<!-- heftPost -->
-			<div data-th-class="${#fields.hasErrors('name')} ? 'medium-12 columns invalid' : 'medium-12 columns' ">
-				<Label data-th-text="#{inputlabel.heftPost}"></Label> 
-				<select id="heft" data-th-field="*{heft}">
-					<option data-th-each="heft : ${allHeft}" data-th-value="${heft}" data-th-text="${heft}">
-				</select>
-			</div>
+			<div data-th-replace="templates/input-custom :: select-12('inputlabel.heftPost', 'heft', ${allHeft})"></div>
 			
 			<!-- disable -->
-			<div class="medium-12 columns">
-				<label data-th-text="#{inputlabel.isdisable}"></label>
-				<input type="checkbox" id="disable" data-th-field="*{disable}">
-			</div>
+			<div data-th-replace="templates/input-custom :: input-12-checkbox('inputlabel.isdisable', 'disable')"></div>
+			
 			<!-- button submit -->
 			<div data-th-replace="templates/core-tag :: button-submit" data-th-remove="tag"></div>
+		
+		</form>
+	
 	</div>
 	
 	<div data-th-fragment="deleteModalWindow" data-th-remove="tag">
