--- a/task/src/main/webapp/WEB-INF/views/fragments/core-script.html
+++ b/task/src/main/webapp/WEB-INF/views/fragments/core-script.html
@@ -6,9 +6,7 @@
 </head>
 <body>
 
-	<script type="text/javascript" data-th-fragment="core-script"  >
-		$(document).foundation();
-	</script>
+	<script type="text/javascript" data-th-fragment="core-script" data-th-src="@{/resources/js/app.js}"></script>
 
 </body>
 </html>
