--- a/task/src/main/webapp/WEB-INF/views/position/position-fargment.html
+++ b/task/src/main/webapp/WEB-INF/views/position/position-fargment.html
@@ -18,7 +18,7 @@
 								<li>
 									<button class="button fi-list" data-th-classappend="${position.disable} ? 'hollow'" type="button" data-th-attr="data-toggle='example-' + @{{id}(id=${position.id})}" ></button>
 									<div class="dropdown-pane dropdown-pane-zie" data-th-id="'example-' + @{{id}(id=${position.id})}" data-dropdown data-auto-focus="true" data-close-on-click="true">
-										<ul class="menu vertical">
+										<ul class="menu vertical" data-sec-authorize="hasAnyAuthority('ADMINISTRATOR','HR')">
 	    									<li><a data-th-href="@{edit/{id}(id=${position.id})}" data-th-text="#{buttonname.edit}" data-th-attr="data-ajax-url='edit/?id='+${position.id}"></a></li>
 	      									<li><a data-open="deleteRecord" data-th-attr="data-position-id=${position.id}" data-th-text="#{buttonname.delete}"></a></li>
 	      								</ul>
@@ -30,21 +30,21 @@
 				</tbody>
 			</table>
 	
-	<div data-th-fragment="core-form(titleForm, urlAction, position)" data-th-remove="tag" >
+	<div data-th-fragment="core-form" data-th-remove="tag" >
 		<form method="post"  data-th-action="${urlAction}" data-th-object="${position}" >
 			
 			<div class="medium-12 columns">
-				<h3 data-th-text="${titleForm}">title form</h3>
+				<h3 data-th-text="#{${titleForm}}">title form</h3>
 			</div>
-			
-			<!-- name -->
-			<div data-th-replace="templates/input-custom :: input-12-text('inputlabel.namePost','namePosition')"></div>
-			
+
+			<!-- name post -->			 
+			 <div data-th-replace="templates/input-custom :: input-text-12(labelValue=#{inputlabel.namePost},inputValue=namePosition)"></div>
+
 			<!-- heftPost -->
 			<div data-th-replace="templates/input-custom :: select-12('inputlabel.heftPost', 'heft', ${allHeft})"></div>
 			
 			<!-- disable -->
-			<div data-th-replace="templates/input-custom :: input-12-checkbox('inputlabel.isdisable', 'disable')"></div>
+			<div data-th-replace="templates/input-custom :: input-checkbox-12('inputlabel.isdisable', 'disable')"></div>
 			
 			<!-- button submit -->
 			<div data-th-replace="templates/core-tag :: button-submit" data-th-remove="tag"></div>
