--- a/task/src/main/webapp/WEB-INF/views/templates/colout.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/colout.html
@@ -1,4 +1,4 @@
-		<div class="columns medium-4" data-th-fragment="home-colout(titleColout, urlModule, description)">
+		<div class="columns" data-th-fragment="home-colout(titleColout, urlModule, description)">
 			<div class="callout">
 				<h5><a data-th-href="@{${urlModule}}"	data-th-text="#{${titleColout}}" class="expanded"></a></h5>
 				<p data-th-text="${description}"></p>
