--- a/task/src/main/webapp/WEB-INF/views/templates/input-custom.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/input-custom.html
@@ -3,64 +3,70 @@
 <body>
 
 <div class="medium-12 columns" data-th-fragment="input-text-12(labelValue,inputValue)">
-	<label data-th-text="${labelValue}"></label> 
+    <label data-th-text="${labelValue}"></label>
 
-	<input
-		type="text" id="${inputValue}" name="${inputValue}"
-		data-th-field="*{__${inputValue}__}"
-		data-th-placeholder="${labelValue}" autofocus="autofocus" />
-	 
-	 <span class="form-error is-visible" data-th-errors="*{__${inputValue}__}"></span>
-	
+    <input
+            type="text" id="${inputValue}" name="${inputValue}"
+            data-th-field="*{__${inputValue}__}"
+            data-th-placeholder="${labelValue}" autofocus="autofocus"/>
+
+    <span class="form-error is-visible" data-th-errors="*{__${inputValue}__}"></span>
+
 </div>
 
-<div class="medium-12 columns"
-	data-th-fragment="input-112-text(labelValue)">
-	<label data-th-text="#{${labelValue}}"></label>
-	 <input type="text"
-		name="${inputValue}" autofocus="autofocus" data-th-id="${inputValue}"
-		data-th-field="${inputValue}" data-th-placeholder="#{${labelValue}}">
-	<!-- <span class="form-error is-visable" data-th-error="${inputValue}"></span> -->
+<div class="medium-12 columns" data-th-fragment="input-pass-12(labelValue,inputValue)">
+    <label data-th-text="${labelValue}"></label>
+    <input type="password" name="${inputValue}" data-th-field="*{__${inputValue}__}" data-th-placeholder="${labelValue}"
+           autofocus="autofocus"/>
+    <span class="form-error is-visible" data-th-errors="*{__${inputValue}__}"></span>
 </div>
 
 <div data-th-fragment="input-4-text(nameTag, textTag)"
-	data-th-remove="tag">
-	<div
-		data-th-class="${#fields.hasErrors('hrOrderNumber')} ? 'medium-4 small-12 columns invalid' : 'medium-4 small-12 columns' ">
-		<label data-th-text="#{${textTag}}"></label> <input type="text"
-			data-th-id="${nameTag}" name="${nameTag}"
-			data-th-field="*{__${nameTag}__}" data-th-placeholder="#{${textTag}}"
-			autofocus="autofocus"> <span class="form-error is-visable"
-			data-th-error="*{__${nameTag}__}"></span>
-	</div>
+     data-th-remove="tag">
+    <div
+            data-th-class="${#fields.hasErrors('hrOrderNumber')} ? 'medium-4 small-12 columns invalid' : 'medium-4 small-12 columns' ">
+        <label data-th-text="#{${textTag}}"></label> <input type="text"
+                                                            data-th-id="${nameTag}" name="${nameTag}"
+                                                            data-th-field="*{__${nameTag}__}"
+                                                            data-th-placeholder="#{${textTag}}"
+                                                            autofocus="autofocus"> <span class="form-error is-visable"
+                                                                                         data-th-error="*{__${nameTag}__}"></span>
+    </div>
 </div>
 
 <div data-th-fragment="input-4-date(nameTag, textTag)"
-	data-th-remove="tag">
-	<div
-		data-th-class="${#fields.hasErrors('hrOrderNumber')} ? 'medium-4 small-12 columns invalid' : 'medium-4 small-12 columns' ">
-		<label data-th-text="#{${textTag}}"></label> <input type="date"
-			data-th-id="${nameTag}" name="${nameTag}"
-			data-th-field="*{__${nameTag}__}" data-th-placeholder="#{${textTag}}"
-			autofocus="autofocus"> <span class="form-error is-visable"
-			data-th-error="*{__${nameTag}__}"></span>
-	</div>
+     data-th-remove="tag">
+    <div
+            data-th-class="${#fields.hasErrors('hrOrderNumber')} ? 'medium-4 small-12 columns invalid' : 'medium-4 small-12 columns' ">
+        <label data-th-text="#{${textTag}}"></label> <input type="date"
+                                                            data-th-id="${nameTag}" name="${nameTag}"
+                                                            data-th-field="*{__${nameTag}__}"
+                                                            data-th-placeholder="#{${textTag}}"
+                                                            autofocus="autofocus"> <span class="form-error is-visable"
+                                                                                         data-th-error="*{__${nameTag}__}"></span>
+    </div>
 </div>
 
 <!-- select -->
 <div class="medium-12 columns"
-	data-th-fragment="select-12(labelValue, labelInput, filedOption)">
-	<Label data-th-text="#{${labelValue}}"></Label> <select
-		id="${labelInput}" data-th-field="*{__${labelInput}__}">
-		<option data-th-each="value : ${filedOption}" data-th-value="${value}"
-			data-th-text="${value}">
-	</select>
+     data-th-fragment="select-12(labelValue, labelInput, filedOption)">
+    <Label data-th-text="#{${labelValue}}"></Label> <select
+        id="${labelInput}" data-th-field="*{__${labelInput}__}">
+    <option data-th-each="value : ${filedOption}" data-th-value="${value}"
+            data-th-text="${value}">
+</select>
 </div>
 
 <!-- checkbox -->
-<div class="medium-12 columns"
-	data-th-fragment="input-checkbox-12(labelValue, labelInput)">
-	<label data-th-text="#{${labelValue}}"></label> <input type="checkbox"
-		data-th-id="${labelInput}" data-th-field="*{__${labelInput}__}">
+<div class="medium-12 columns" data-th-fragment="input-checkbox-12(labelValue, labelInput)">
+    <label data-th-text="${labelValue}"></label>
+    <input type="checkbox" data-th-id="${labelInput}" data-th-field="*{__${labelInput}__}">
+</div>
+
+<!-- checkbox multi -->
+<div class="columns medium-12" data-th-fragment="input-checkbox-milti-12(labelValue,inputValue,items,itemId,textItem)">
+    <label data-th-text="${labelValue}"></label>
+    <input type="checkbox" name="role" data-th-each="item : ${items}" data-th-text="${textItem} + ' '"
+           data-th-field="*{__${inputValue}__}}" data-th-value="${itemId}">
 </div>
 </body>
