--- a/task/src/main/webapp/WEB-INF/views/home.html
+++ b/task/src/main/webapp/WEB-INF/views/home.html
@@ -11,7 +11,7 @@
 		<h4>Module app</h4>
 	</div>
 	
-	<div class="row felx-container">
+	<div class="row flex-container">
 		
 		<div data-th-replace="templates/colout :: home-colout(titleColout='titleform.admin', urlModule='/employee/', description='')"></div>
 		
